// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-inputs/InputField renders correctly 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "color": "#5E6678",
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        undefined,
      ]
    }
  >
    title
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#9BA1B0",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
        },
        undefined,
      ]
    }
  >
    subtitle
  </Text>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly disabled 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#D1D4DB",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly disabled 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#D1D4DB",
          "borderColor": "#D1D4DB",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly focused/blur 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly focused/blur 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly valid 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(43, 120, 238, 0.15)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly valid 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(43, 120, 238, 0.15)",
          "borderColor": "#2B78EE",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly wrong 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(245, 77, 61, 0.15)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/InputField renders correctly wrong 2`] = `
<View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(245, 77, 61, 0.15)",
          "borderColor": "#F54D3D",
          "borderRadius": 8,
          "borderWidth": 2,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
          "minWidth": 120,
          "padding": 8,
        },
        undefined,
      ]
    }
  >
    <TextInput
      editable={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#5E6678"
      style={
        Array [
          Object {
            "color": "#20242D",
            "flex": 1,
            "padding": 0,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;
